--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
 @tailwind base;
+*::-webkit-scrollbar {
+  width: 8px;
+}
+*::-webkit-scrollbar-track {
+  background: #fff;
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #acacad;
+  border-radius: 14px;
+}
+
 @tailwind components;
 @tailwind utilities;
